--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -199,3 +200,5 @@ tags
 
 # End of https://www.toptal.com/developers/gitignore/api/node,macos,vim,asdf
 
+
+certificates
