--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.3",
+    "next": "^14.1.0",
+    "path-to-regexp": "^6.2.1",
     "react": "^18",
     "react-dom": "^18"
   },
